# nz-job-market-dashboard

./: .dockerignore  .env.example  .gitignore  NZ_Job_Market_Dashboard_Coding_Agent_Plan.md  NzJobMarketDashboard.sln  README.md  docker-compose.yml
backend/src/Api/: Api.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
backend/src/Api/Properties/: launchSettings.json
backend/src/Application/: Application.csproj
backend/src/Application/Analytics/: AnalyticsDtos.cs  AnalyticsService.cs
backend/src/Application/Common/: IApplicationDbContext.cs
backend/src/Application/Crawling/: CrawlDtos.cs  CrawlerOrchestrationService.cs  IJobSourceAdapter.cs
backend/src/Application/Deduplication/: DeduplicationService.cs
backend/src/Application/DependencyInjection/: ServiceCollectionExtensions.cs
backend/src/Infrastructure/: Infrastructure.csproj
backend/src/Worker/: Dockerfile  Program.cs  Worker.cs  Worker.csproj
backend/tests/Application.Tests/: Application.Tests.csproj  CrawlerOrchestrationServiceTests.cs  DeduplicationServiceTests.cs  FirecrawlClientTests.cs  FirecrawlMarkdownParserTests.cs  NormalisationServiceTests.cs
crawler/: README.md  pyproject.toml
crawler/adapters/scrapling/: scrapling_worker.py
crawler/nz_job_market_crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crawler/tests/: test_scrapling_worker.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: format.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
(+29 files in other folders)
