[project]
name = "nz-job-market-crawler"
version = "0.1.0"
description = "Scrapling crawler worker for the NZ Job Market Intelligence Dashboard"
requires-python = ">=3.11"
dependencies = [
  "scrapling>=0.3.0",
  "curl_cffi>=0.7.0",
  "playwright>=1.49.0",
  "browserforge>=1.2.0",
]

[project.optional-dependencies]
test = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["adapters*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
